--- a/templates/index.html
+++ b/templates/index.html
@@ -63,13 +63,18 @@
             <div class="cards">
                 <div class="card">
                     <div class="project">
-                        <h5 class="project-name">SUNDAY IN LISBOA</h5>
+                        <h5 class="project-name">Sunday In Lisboa</h5>
                         <div class="project-details">
                             <p class="project-desc">Implemented OdooERP, including category-wise product image and
                                 pricing
                                 uploads for e-commerce, website product publishing, and accounting tax configuration.
                             </p>
-                            <p class="project-stack"><span>Tech Stack: </span> OdooERP</p>
+                            <div class="project-stack">
+                                <ul>
+                                    <li>Tech Statck: </li>
+                                    <li class="odoo">OdooERP</li>
+                                </ul>
+                            </div>
                         </div>
 
                     </div>
@@ -77,7 +82,7 @@
                 </div>
                 <div class="card">
                     <div class="project">
-                        <h5 class="project-name">MADURAIMARKET</h5>
+                        <h5 class="project-name">Maduraimarket</h5>
                         <div class="project-details">
                             <p class="project-desc">UIDevelopment: Created the website layout and design to be easy to
                                 use
@@ -87,13 +92,21 @@
                                 RESTfulAPIs:
                                 Built APIs for user registration, product management, and order processing.
                                 configuration.</p>
-                            <p class="project-stack"><span>Tech Stack: </span>HTML, CSS, Laravel, RESTfulAPIs</p>
+                            <div class="project-stack">
+                                <ul>
+                                    <li>Tech Statck: </li>
+                                    <li class="html">HTML</li>
+                                    <li class="css">CSS</li>
+                                    <li class="laravel">Laravel</li>
+                                    <li class="RestfilAPIs">RestfilAPIs</li>
+                                </ul>
+                            </div>
                         </div>
                     </div>
                 </div>
                 <div class="card">
                     <div class="project">
-                        <h5 class="project-name">DR.SOBI'S DENTAL ELITE DENTAL CARE</h5>
+                        <h5 class="project-name">DR.Sobi's Elite Dental Care</h5>
                         <div class="project-details">
                             <p class="project-desc">Developed a responsive static website for a dental clinic using
                                 HTML,
@@ -101,31 +114,49 @@
                                 and Bootstrap. Added an appointment form integrated with EmailJS for email
                                 notifications and WhatsApp for direct messaging. Created a services page to
                                 display dental treatments with photos.</p>
-                            <p class="project-stack"><span>Tech Stack: </span>HTML, CSS</p>
+                            <div class="project-stack">
+                                <ul>
+                                    <li>Tech Statck: </li>
+                                    <li class="html">HTML</li>
+                                    <li class="css">CSS</li>
+                                </ul>
+                            </div>
                         </div>
                     </div>
                 </div>
                 <div class="card">
                     <div class="project">
-                        <h5 class="project-name">THE COFFEE SPOT</h5>
+                        <h5 class="project-name">The Coffee Spot</h5>
                         <div class="project-details">
                             <p class="project-desc">Built a static website using Django with proper static file handling
                                 (CSS
                                 and
                                 images) and deployed it on Render using Gunicorn and WhiteNoise.</p>
-                            <p class="project-stack"><span>Tech Stack: </span>Django, HTML, CSS</p>
+                            <div class="project-stack">
+                                <ul>
+                                    <li>Tech Statck: </li>
+                                    <li class="html">HTML</li>
+                                    <li class="css">CSS</li>
+                                    <li class="django">Django</li>
+                                </ul>
+                            </div>
                         </div>
                     </div>
                 </div>
                 <div class="card">
                     <div class="project">
-                        <h5 class="project-name">VAMANA AROMAS LLP</h5>
+                        <h5 class="project-name">Vamana Aromas llp</h5>
                         <div class="project-details">
                             <p class="project-desc">Implemented Odoo ERP with custom workflows, automated processes,
                                 custom
                                 module development, user role access rights, custom field creation, and record
                                 rule configurations to support secure and efficient business operations.</p>
-                            <p class="project-stack"><span>Tech Stack: </span>Odoo ERP</p>
+                            <div class="project-stack">
+                                <ul>
+                                    <li>Tech Statck: </li>
+                                    <li class="odoo">OdooERP</li>
+                                </ul>
+                            </div>
                         </div>
                     </div>
                 </div>
