--- a/templates/index.html
+++ b/templates/index.html
@@ -15,7 +15,7 @@
     <header>
         <nav class="navbar navbar-expand-lg fixed-top">
             <div class="container" id="container">
-                <a class="navbar-brand" href="/">Protfolio</a>
+                <a class="navbar-brand" href="/" data-aos="zoom-in"> DK Protfolio</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon" id="navIcon"></span>
@@ -32,7 +32,7 @@
                             <a class="nav-link" href="#projects">Projects</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/#skills">Skills</a>
+                            <a class="nav-link" href="/#skills">Tech Stack</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#contact-us">Contact Us</a>
@@ -51,6 +51,8 @@
                 <h5 class="typewriter text-center">Software Developer</h5>
                 <p>2+ years building and customizing Odoo ERP solutions. Currently developing e-commerce and static
                     websites using Django and Flask.</p>
+                <!-- <a href="{{ url_for('static', filename='resume/Dinesh_Kumar_CV.pdf') }}" download class="btn button">Download CV</a> -->
+                <a class=" btn button" href="#contact-us">Contact Now</a>
             </div>
 
             <div class="photo">
@@ -97,8 +99,8 @@ class Developer:
             <div class="cards">
                 <div class="card">
                     <div class="project">
-                        <h5 class="project-name">Sunday In Lisboa</h5>
-                        <div class="project-details">
+                        <h5 class="project-name fadeup">Sunday In Lisboa</h5>
+                        <div class="project-details fadeup">
                             <p class="project-desc">Implemented OdooERP, including category-wise product image and
                                 pricing
                                 uploads for e-commerce, website product publishing, and accounting tax configuration.
@@ -114,7 +116,7 @@ class Developer:
                     </div>
 
                 </div>
-                <div class="card">
+                <!-- <div class="card">
                     <div class="project">
                         <h5 class="project-name">Maduraimarket</h5>
                         <div class="project-details">
@@ -137,11 +139,11 @@ class Developer:
                             </div>
                         </div>
                     </div>
-                </div>
+                </div> -->
                 <div class="card">
                     <div class="project">
-                        <h5 class="project-name">DR.Sobi's Elite Dental Care</h5>
-                        <div class="project-details">
+                        <h5 class="project-name fadeup">DR.Sobi's Elite Dental Care</h5>
+                        <div class="project-details fadeup">
                             <p class="project-desc">Developed a responsive static website for a dental clinic using
                                 HTML,
                                 CSS,
@@ -160,8 +162,8 @@ class Developer:
                 </div>
                 <div class="card">
                     <div class="project">
-                        <h5 class="project-name">The Coffee Spot</h5>
-                        <div class="project-details">
+                        <h5 class="project-name fadeup">The Coffee Spot</h5>
+                        <div class="project-details fadeup">
                             <p class="project-desc">Built a static website using Django with proper static file handling
                                 (CSS
                                 and
@@ -179,8 +181,8 @@ class Developer:
                 </div>
                 <div class="card">
                     <div class="project">
-                        <h5 class="project-name">Vamana Aromas llp</h5>
-                        <div class="project-details">
+                        <h5 class="project-name fadeup">Vamana Aromas llp</h5>
+                        <div class="project-details fadeup">
                             <p class="project-desc">Implemented Odoo ERP with custom workflows, automated processes,
                                 custom
                                 module development, user role access rights, custom field creation, and record
@@ -199,84 +201,75 @@ class Developer:
 
     <section class="skills" id="skills">
         <div class="container">
-            <h1>Skills</h1>
+            <h1>Tech Stack</h1>
             <div class="skills-list">
-                <div class="backend">
-                    <h5>Backend & Web</h5>
-                    <ul>
-                        <li><img src="{{ url_for('static', filename='images/python_logo.webp') }}" alt=""></li>
-                        <li><img src="{{ url_for('static', filename='images/django_logo.png') }}" alt=""></li>
-                        <li><img src="{{ url_for('static', filename='images/flask.jpg') }}" alt=""></li>
-                    </ul>
-                </div>
-                <div class="frontend">
-                    <h5>Frontend</h5>
-                    <ul>
-                        <li><img src="{{ url_for('static', filename='images/html_logo.webp') }}" alt=""></li>
-                        <li><img src="{{ url_for('static', filename='images/css_logo.webp') }}" alt=""></li>
-                    </ul>
-                </div>
-                <div class="erp">
-                    <h5>ERP</h5>
-                    <ul>
-                        <li><img src="{{ url_for('static', filename='images/odoo_logo.png') }}" alt=""></li>
-
-                    </ul>
-                </div>
-                <div class="database">
-                    <h5>Database</h5>
-                </div>
-                <div class="tools">
-                    <h5>Tools</h5>
-                </div>
+                <ul>
+                    <li><img src="{{ url_for('static', filename='images/python_logo.webp') }}" alt=""></li>
+                    <li><img src="{{ url_for('static', filename='images/django_logo.png') }}" alt=""></li>
+                    <li><img src="{{ url_for('static', filename='images/flask.jpg') }}" alt=""></li>
+                    <li><img src="{{ url_for('static', filename='images/html_logo.webp') }}" alt=""></li>
+                    <li><img src="{{ url_for('static', filename='images/css_logo.webp') }}" alt=""></li>
+                    <li><img src="{{ url_for('static', filename='images/odoo_logo.png') }}" alt=""></li>
+                    <li><img src="{{ url_for('static', filename='images/postgresql.jpg') }}" alt=""></li>
+                    <li><img src="{{ url_for('static', filename='images/git.jpg') }}" alt=""></li>
+                    <li><img src="{{ url_for('static', filename='images/github.jpg') }}" alt=""></li>
+                </ul>
             </div>
         </div>
     </section>
 
     <section class="contact-us" id="contact-us">
-        <div class="container">
-            <h1>Get in touch</h1>
-            <div class="contact-icons">
-                <p class="phone">
-                    <span><svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px"
-                            fill="#fff">
-                            <path
-                                d="M760-480q0-117-81.5-198.5T480-760v-80q75 0 140.5 28.5t114 77q48.5 48.5 77 114T840-480h-80Zm-160 0q0-50-35-85t-85-35v-80q83 0 141.5 58.5T680-480h-80Zm198 360q-125 0-247-54.5T329-329Q229-429 174.5-551T120-798q0-18 12-30t30-12h162q14 0 25 9.5t13 22.5l26 140q2 16-1 27t-11 19l-97 98q20 37 47.5 71.5T387-386q31 31 65 57.5t72 48.5l94-94q9-9 23.5-13.5T670-390l138 28q14 4 23 14.5t9 23.5v162q0 18-12 30t-30 12ZM241-600l66-66-17-94h-89q5 41 14 81t26 79Zm358 358q39 17 79.5 27t81.5 13v-88l-94-19-67 67ZM241-600Zm358 358Z" />
-                        </svg></span><span class="phone1">+91 9080443268</span>
-                </p>
-                <p class="mail">
-                    <span><svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px"
-                            fill="#fff">
-                            <path
-                                d="M160-160q-33 0-56.5-23.5T80-240v-480q0-33 23.5-56.5T160-800h640q33 0 56.5 23.5T880-720v480q0 33-23.5 56.5T800-160H160Zm320-280L160-640v400h640v-400L480-440Zm0-80 320-200H160l320 200ZM160-640v-80 480-400Z" />
-                        </svg></span><a href="mailto:dineshkumars.softdev@gmail.com">
-                        dineshkumars.softdev@gmail.com</a>
-                </p>
+        <div class="container contactus">
+            <div class="row">
+                <div class="col-md-6">
 
-                <p class="linkedin">
-                    <span><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 30 30" width="24px" height="24px"
-                            fill="#fff">
-                            <path
-                                d="M24,4H6C4.895,4,4,4.895,4,6v18c0,1.105,0.895,2,2,2h18c1.105,0,2-0.895,2-2V6C26,4.895,25.105,4,24,4z M10.954,22h-2.95 v-9.492h2.95V22z M9.449,11.151c-0.951,0-1.72-0.771-1.72-1.72c0-0.949,0.77-1.719,1.72-1.719c0.948,0,1.719,0.771,1.719,1.719 C11.168,10.38,10.397,11.151,9.449,11.151z M22.004,22h-2.948v-4.616c0-1.101-0.02-2.517-1.533-2.517 c-1.535,0-1.771,1.199-1.771,2.437V22h-2.948v-9.492h2.83v1.297h0.04c0.394-0.746,1.356-1.533,2.791-1.533 c2.987,0,3.539,1.966,3.539,4.522V22z" />
-                        </svg></span><a href="https://www.linkedin.com/in/dinesh-kumar-softdev">Linkedin Profile</a>
-                </p>
-            </div>
+                    <h1>Let's Work Together.</h1>
+                    <p></p>
+                    <div class="contact-icons">
+                        <p class="phone">
+                            <span><svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960"
+                                    width="24px" fill="#fff">
+                                    <path
+                                        d="M760-480q0-117-81.5-198.5T480-760v-80q75 0 140.5 28.5t114 77q48.5 48.5 77 114T840-480h-80Zm-160 0q0-50-35-85t-85-35v-80q83 0 141.5 58.5T680-480h-80Zm198 360q-125 0-247-54.5T329-329Q229-429 174.5-551T120-798q0-18 12-30t30-12h162q14 0 25 9.5t13 22.5l26 140q2 16-1 27t-11 19l-97 98q20 37 47.5 71.5T387-386q31 31 65 57.5t72 48.5l94-94q9-9 23.5-13.5T670-390l138 28q14 4 23 14.5t9 23.5v162q0 18-12 30t-30 12ZM241-600l66-66-17-94h-89q5 41 14 81t26 79Zm358 358q39 17 79.5 27t81.5 13v-88l-94-19-67 67ZM241-600Zm358 358Z" />
+                                </svg></span><span class="phone1">+91 9080443268</span>
+                        </p>
+                        <p class="mail">
+                            <span><svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960"
+                                    width="24px" fill="#fff">
+                                    <path
+                                        d="M160-160q-33 0-56.5-23.5T80-240v-480q0-33 23.5-56.5T160-800h640q33 0 56.5 23.5T880-720v480q0 33-23.5 56.5T800-160H160Zm320-280L160-640v400h640v-400L480-440Zm0-80 320-200H160l320 200ZM160-640v-80 480-400Z" />
+                                </svg></span><a href="mailto:dineshkumars.softdev@gmail.com">
+                                dineshkumars.softdev@gmail.com</a>
+                        </p>
 
-            {% with messages = get_flashed_messages() %}
-            {% if messages %}
-            <p style="color: green;">{{ messages[0] }}</p>
-            {% endif %}
-            {% endwith %}
-
-            <form id="contact-form" action="/" method="post">
-                <input class="form-control" type="text" name="name" placeholder="Your Name" required><br>
-                <input class="form-control" type="email" name="email" placeholder="Your Email" required><br>
-                <textarea class="form-control" name="message" placeholder="Your Message" required></textarea><br>
-                <div class="text-center">
-                    <button class="btn btn-primary button ms-auto" type="submit">Send Message</button>
+                        <p class="linkedin">
+                            <span><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 30 30" width="24px" height="24px"
+                                    fill="#fff">
+                                    <path
+                                        d="M24,4H6C4.895,4,4,4.895,4,6v18c0,1.105,0.895,2,2,2h18c1.105,0,2-0.895,2-2V6C26,4.895,25.105,4,24,4z M10.954,22h-2.95 v-9.492h2.95V22z M9.449,11.151c-0.951,0-1.72-0.771-1.72-1.72c0-0.949,0.77-1.719,1.72-1.719c0.948,0,1.719,0.771,1.719,1.719 C11.168,10.38,10.397,11.151,9.449,11.151z M22.004,22h-2.948v-4.616c0-1.101-0.02-2.517-1.533-2.517 c-1.535,0-1.771,1.199-1.771,2.437V22h-2.948v-9.492h2.83v1.297h0.04c0.394-0.746,1.356-1.533,2.791-1.533 c2.987,0,3.539,1.966,3.539,4.522V22z" />
+                                </svg></span><a href="https://www.linkedin.com/in/dinesh-kumar-softdev">Linkedin
+                                Profile</a>
+                        </p>
+                    </div>
                 </div>
+                <div class="col-md-6">
+                    {% with messages = get_flashed_messages() %}
+                    {% if messages %}
+                    <p style="color: green;">{{ messages[0] }}</p>
+                    {% endif %}
+                    {% endwith %}
 
-            </form>
+                    <form id="contact-form" action="/" method="post" autocomplete="off">
+                        <input class="form-control" type="text" name="name" placeholder="Your Name" required><br>
+                        <input class="form-control" type="email" name="email" placeholder="Your Email" required><br>
+                        <textarea class="form-control" name="message" placeholder="Your Message"
+                            required></textarea><br>
+                        <div class="text-center">
+                            <button class="btn button ms-auto" type="submit">Send Message</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
         </div>
     </section>
 
@@ -319,6 +312,17 @@ class Developer:
             navIcon.style.backgroundImage = "url('/static/images/menu.png')";
         });
 
+    </script>
+    <script>
+        document.querySelectorAll('.navbar-nav .nav-link').forEach(function (link) {
+            link.addEventListener('click', function () {
+                var navbarCollapse = document.querySelector('.navbar-collapse');
+                var bsCollapse = new bootstrap.Collapse(navbarCollapse, {
+                    toggle: false
+                });
+                bsCollapse.hide();
+            });
+        });
     </script>
 </body>
 
